Scopes don't work in image editor #58502

Closed
opened 2018-12-02 10:20:48 +01:00 by JG Loquet · 9 comments

System Information
Operating system: Win7 64
Graphics card: GeForce 980Ti

Blender Version
Broken: blender-2.80.0-git.26d5a3625ed-windows64 (official beta)

Short description of error
The scopes don't work in the image editor (graticules are there but no signal)
Error message displayed in the status bar (bottom) : Tool 'Select Box' not found for space 'IMAGE_EDITOR'

Exact steps for others to reproduce the error
Based on the default startup
Open an image in the image editor : no scopes :/

**System Information** Operating system: Win7 64 Graphics card: GeForce 980Ti **Blender Version** Broken: blender-2.80.0-git.26d5a3625ed-windows64 (official beta) **Short description of error** The scopes don't work in the image editor (graticules are there but no signal) Error message displayed in the status bar (bottom) : Tool 'Select Box' not found for space 'IMAGE_EDITOR' **Exact steps for others to reproduce the error** Based on the default startup Open an image in the image editor : no scopes :/
Author

Added subscriber: @Jean-GabrielLOQUET

Added subscriber: @Jean-GabrielLOQUET

#59086 was marked as duplicate of this issue

#59086 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm, checking...

Can confirm, checking...

Added subscribers: @SubliminalArtist, @StephenSwaney, @GavinScott

Added subscribers: @SubliminalArtist, @StephenSwaney, @GavinScott

Added subscriber: @intracube

Added subscriber: @intracube

Added subscriber: @mathers

Added subscriber: @mathers
Jacques Lucke self-assigned this 2019-01-24 11:49:05 +01:00

This issue was referenced by a4a60358b5

This issue was referenced by a4a60358b55d0b42dec425a5dc49ed660e5bbdfb
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58502
No description provided.